--- a/Trabalho/index.html
+++ b/Trabalho/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/css1.css">
-    <title>Document</title>
+    <title>Plano de Saúde Ideal</title>
 </head>
 
 <body>
